tests/lean/1705.lean
class S (R : T u) M : R
